# tcga-pull

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SCHEMAS.md  pyproject.toml
.githooks/: pre-merge-commit
.github/workflows/: ci.yml
examples/: pancancer_multiomics.yaml  pancancer_omics_overlap.py  pancancer_snv.yaml
scripts/: verify.sh
src/tcga_pull/: __init__.py  agent.py  api.py  bench.py  case_set.py  cli.py  config.py  coverage.py  download.py  frequency.py  gdc.py  install_gdc.py  layout.py  model_dataset.py  multiomics.py  oncotree.py  overlap.py  pipeline.py  samples.py  samples_polars.py  schema.py  services.py  tissue.py  validate.py  variants.py  variants_polars.py
src/tcga_pull/data/: __init__.py
tests/: test_api.py  test_case_set.py  test_cli.py  test_config.py  test_coverage.py  test_download.py  test_e2e.py  test_facet_regression.py  test_frequency.py  test_layout.py  test_limit.py  test_model_dataset.py  test_multiomics.py  test_oncotree.py  test_overlap.py  test_polars_parity.py  test_samples.py  test_services.py  test_tissue.py  test_validate.py  test_variants.py
